--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "country-state-city": "^3.2.1",
     "graphql": "^16.8.1",
     "next": "14.0.4",
+    "openai": "^4.24.1",
     "react": "^18",
     "react-dom": "^18",
     "react-select": "^5.8.0"
