improved ai data consumption and styling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "cSpell.words": ["heroicons", "openai"]
+  "cSpell.words": [
+    "extralight",
+    "heroicons",
+    "openai",
+    "weathercode",
+    "winddirection",
+    "windspeed",
+    "wowpixels"
+  ]
 }
