--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "openai": "^4.24.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "react-select": "^5.8.0"
   },
   "devDependencies": {
