--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "engines": {
+    "node": ">=22.0.0"
+  },
   "dependencies": {
     "@apollo/client": "^3.8.8",
     "@heroicons/react": "^1.0.6",
@@ -15,7 +18,7 @@
     "ai": "^2.2.31",
     "country-state-city": "^3.2.1",
     "graphql": "^16.8.1",
-    "next": "14.0.4",
+    "next": "^15.4.3",
     "openai": "^4.24.1",
     "react": "^18",
     "react-dom": "^18",
@@ -23,6 +26,7 @@
     "react-select": "^5.8.0"
   },
   "devDependencies": {
+    "@headlessui/tailwindcss": "^0.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
