--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "node": ">=22.0.0"
   },
   "dependencies": {
-    "@apollo/client": "^3.8.8",
     "@heroicons/react": "^1.0.6",
     "@tremor/react": "^3.12.2",
     "ai": "^2.2.31",
     "country-state-city": "^3.2.1",
-    "graphql": "^16.8.1",
+    "graphql": "^16.11.0",
+    "graphql-yoga": "^5.15.1",
     "next": "^15.4.3",
     "openai": "^4.24.1",
     "react": "^18",
